# WikiNetworks

./: .gitignore  closeness.Rmd  closeness.py  katz.Rmd  readme.org  report.tex  requirements.txt
download_scripts/: buildDatabase.sh  replace_titles_and_redirects_in_links_file.py  replace_titles_in_redirects_file.py
final_report/: report.tex
parser/: readme.org  replace_redirects_in_titles.py
python_scripts/: convert_to_edgelist.py  helpers.py  main.py  sparse.py
resources/: closeness.py  helpers.py
sparse/: __init__.py  create_testing_matrix.py  diameter.py  katz.py  random_graph.py  readme.md  requirements.txt  setup.cfg  sparse_graph.py  tox.ini
sparse/src/sparse/: __init__.py  breadth_first_search.py  closeness.py  diameter.py  katz.jl  katz.py  random_graph.py  sparse_graph.py
sparse/tests/: test_breadth_first_search.py  test_closeness.py  test_closeness_centrality.py  test_diameter.py  test_katz_centrality.py
sparse_graph/: breadth_first_search.py  closeness.py  convert_page_ids_to_matrix_index.py  convert_to_edgelist.py  create_connected_subgraph.py  create_nodes_list.py  create_smaller_node_list.py  create_sparse_graph.py  create_strong_subgraph.py  create_testing_matrix.py  database.py  edge_analysis.py  find_article_id.py  find_articles.py  generate_edge_dataframes.py  graph_analysis.py  helpers.py  labelled_sparse_graph.py  parse_wiki.py  replace_redirects_in_titles.py  sparse.py  sparse_graph.py  verify_edge_list.py
wikipedia/: calculate_centrality.py  calculate_changes.py  calculate_closeness.py  calculate_degree_centrality.py  degree_avg.py  (+6 more)
(+4 files in other folders)
