[metadata]
name = sparse-wiki
version = 1.0
author = Gus Beringer
author_email = gusberinger@gmail.com
description = Package to manage wiki networks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gusberinger/WikiNetwork
project_urls =
    Bug Tracker = https://github.com/gusberinger/WikiNetwork/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src